# Ciyaar-Intelligence-

./: README.md  pyproject.toml  requirements.txt
ciyaar_intelligence/: __init__.py
ciyaar_intelligence/core/: __init__.py  base_architecture.py  hybrid_optimizer.py  quantum_neural_network.py
ciyaar_intelligence/neural/: __init__.py  adaptive_architecture.py  attention_quantum.py  industry_modules.py
ciyaar_intelligence/platform/: __init__.py  ciyaar_platform.py  inference_engine.py  model_registry.py  training_engine.py
ciyaar_intelligence/quantum/: __init__.py  quantum_layer.py
examples/: demo.py
